--- a/src/Components/Dialogs/FirstCol/DialName/DialName.module.css
+++ b/src/Components/Dialogs/FirstCol/DialName/DialName.module.css
@@ -10,9 +10,15 @@
 .dial_ava{
     width: 40px;
     height: 40px;
-
+position: relative;
+    overflow: hidden;
+    text-align: center;
     border-radius: 25px;
     background: #eee;
+}
+.dial_ava img{
+    width: 100%;
+    height: auto;
 }
 .dial_ava_div{
     width: 40px;
