--- a/src/Components/Dialogs/SecondCol/DialHistory/DialHistory.module.css
+++ b/src/Components/Dialogs/SecondCol/DialHistory/DialHistory.module.css
@@ -67,13 +67,16 @@
     height: 41px;
     position: relative;
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+text-align: center;
     border-radius: 21px;
     margin-right: 15px;
     margin-left: 25px;
     background: #eee;
+}
+.mess_ava img{
+    width: 100%;
+    height: auto;
+
 }
 .autor_name{
     position: absolute;
