--- a/src/Components/Profile/My_post/My_post.module.css
+++ b/src/Components/Profile/My_post/My_post.module.css
@@ -105,6 +105,13 @@
 background: #eee;
     border-radius: 25px;
     margin-right: 15px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+.ava img{
+    width: 100%;
+    height: auto;
 }
 .name{
     margin: 0;
