--- a/src/Components/Profile/Ava_Desc/Description.module.css
+++ b/src/Components/Profile/Ava_Desc/Description.module.css
@@ -12,6 +12,7 @@
     border-right: none;
     border-top: none;
     min-height: 250px;
+    width: 540px;
     position: relative;
 }
     .desc_p_div {
