--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -51,7 +51,7 @@ flex-flow: row;
     width: 197px;
     height: 100%;
     position: relative;
-    background: #f6ffdf;
+    background: #fff;
 
 
 }
@@ -135,6 +135,49 @@ flex-flow: row;
     border: none;
     color: #fff;
     background: #87b27e;
+}
+.pages_btn_div{
+    margin-top: 20px;
+    width: 100%;
+    height: 55px;
+    background: #fff;
+    border-bottom:1px solid #e9f5c9 ;
+    border-top: 1px solid #e9f5c9;
+   display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+}
+.page_btn{
+    width: 35px;
+    height: 35px;
+    margin-left: 3px;
+    margin-right: 3px;
+    border: 1px solid #ffb18e;
+    text-align: center;
+    background: #fff;
+    line-height: 31px;
+    border-radius: 7px;
+    color: #888;
+    cursor: pointer;
+}
+.page_btn:hover{
+
+    box-shadow: 0 0 4px #ffb18e;
+}
+.selected_page{
+    width: 35px;
+    height: 35px;
+    margin-left: 3px;
+    margin-right: 3px;
+    border: 1px solid #ffb18e;
+    text-align: center;
+    background: #ffb18e;
+    line-height: 31px;
+    border-radius: 7px;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
 }
 .user_fr_status:hover{
     box-shadow: 0 0 3px 2px #dcee97;
