--- a/src/Components/Profile/Ava_Desc/Description.module.css
+++ b/src/Components/Profile/Ava_Desc/Description.module.css
@@ -6,13 +6,13 @@
     flex-flow: column;
     border-radius: 0 0 0 10px;
     background: #fff;
-    margin-left: 10px;
+
     margin-bottom: 10px;
     border: 1px solid #d8e4d4;
     border-right: none;
     border-top: none;
-    min-height: 250px;
-    width: 540px;
+    min-height: 100px;
+    width: 550px;
     position: relative;
 }
     .desc_p_div {
@@ -22,35 +22,46 @@
         margin-bottom: 5px;
         padding-left: 10px;
     }
-        .desc_div div p {
-            margin-left: 5px;
-            margin-top: 5px;
-            margin-bottom: 5px;
-        }
+
+
+
 
 .p_1 {
     width: 180px;
     font-size: 13px;
     color: #93997d;
     margin-right: 40px;
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 .p_2 {
-    width: 280px;
+    width: 290px;
     font-size: 13px;
     text-overflow: ellipsis;
     overflow: hidden;
     text-align: left;
     color: #67825e;
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 .name {
     font-size: 17px;
     margin-left: 13px;
     padding-bottom: 15px;
-    width: 495px;
+    width: 505px;
     border-bottom: 1px solid #e0e3d5;
     margin-top: 8px;
     margin-bottom: 8px;
     padding-left: 2px;
     color: #67825e;
     font-weight:700;
+}
+.about_me{
+    margin: 0;
+    margin-top: 2px;
+    font-size: 13px;
+    font-weight: 400;
+    color: #555;
 }
