--- a/src/Components/Profile/My_post/My_post.module.css
+++ b/src/Components/Profile/My_post/My_post.module.css
@@ -6,7 +6,7 @@
     flex-flow: column;
     border-radius: 10px 0 0 10px;
     background: #fff;
-    margin-left: 10px;
+
     margin-bottom: 10px;
     border: 1px solid #d8e4d4;
     border-right: none;
@@ -15,13 +15,13 @@
 .Post_div {
     padding: 0;
     display: flex;
-    width: 540px;
+    width: 550px;
     justify-content: flex-start;
     align-items: flex-start;
     flex-flow: column;
     border-radius: 10px 0 0 10px;
     background: #fff;
-    margin-left: 10px;
+
     margin-bottom: 10px;
     border: 1px solid #d8e4d4;
     border-right: none;
@@ -33,9 +33,9 @@
     border-left: 1px solid #e0ecdc;
     border-right: 1px solid #e0ecdc;
     font-size: 14px;
-    color: #67825e;
+    color: #555;
     font-family: 'Mukta', sans-serif;
-    width: 505px;
+    width: 515px;
     min-height: 60px;
     line-height: 18px;
     padding: 3px 7px 3px 7px;
@@ -50,7 +50,7 @@
     position: relative;
     margin: 0;
     
-    width: 505px;
+    width: 515px;
     min-height: 100px;
 }
 .add_post_btn {
@@ -88,7 +88,7 @@
         margin: 0px;
         margin-top: 10px;
         margin-left: 15px;
-        width: 505px;
+        width: 515px;
     }
     .post_avtor{
         display: flex;
