--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -65,9 +65,9 @@ flex-flow: row;
     position: relative;
     border-radius: 10px 0 0 10px;
 }
-.user_div:last-child{
+/*.user_div:last-child{
    margin-bottom: 0;
-}
+}*/
 .user_ava_div{
     width: 80px;
     height: 80px;
@@ -134,15 +134,14 @@ flex-flow: row;
     width: 120px;
     border: none;
     color: #fff;
-    background: #87b27e;
+    background: #7ca56e;
 }
 .pages_btn_div{
-    margin-top: 20px;
     width: 100%;
-    height: 55px;
+    height: 60px;
     background: #fff;
     border-bottom:1px solid #e9f5c9 ;
-    border-top: 1px solid #e9f5c9;
+    border-top: 2px solid #e9f5c9;
    display: flex;
     flex-flow: row;
     align-items: center;
