--- a/src/App.css
+++ b/src/App.css
@@ -97,8 +97,8 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-     background: #ef8f64;
-   /* background: #f58f64;*/
+    /* background: #ef8f64;*/
+    background: #f58f64;
     border-bottom: 3px solid #ffb18e;
     width: 100vw;
     box-sizing: border-box;
