--- a/src/Components/General/PreLoader/Preloader.module.css
+++ b/src/Components/General/PreLoader/Preloader.module.css
@@ -1,13 +1,180 @@
-.loading{
-    font-family: Arial;
-    position: absolute;
-    width: 400px;
-    height: 80px;
-    text-align: center;
-    line-height: 80px;
-    color: rgba(0,0,0,0.3);
-    top:300px;
-    left: 100px;
 
-    font-size: 60px;
+.box {
+    height: 200px;
+    width: 200px;
+    overflow: hidden;
+    border-radius: 35.02627px;
+    position: absolute;
+    top:50vh;
+    left:50vw;
+    margin-top: -100px;
+    margin-left: -100px;
+
+}
+
+.box::after {
+    position: relative;
+    content: '';
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2000px;
+    background: linear-gradient(135deg, #d8ffca 0%, #ffb1b1 25%, #ffca97 50%, #ffb1b1 75%, #d8ffca 100%);
+    animation: animatebg 10s infinite linear;
+}
+
+@keyframes animatebg {
+    0% {
+        top: 0;
+    }
+    50% {
+        top: -1800px;
+    }
+    100% {
+        top: 0;
+    }
+}
+
+.logo > div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border: #fff 9px solid;
+    z-index: 2;
+    box-sizing: border-box;
+}
+
+.logo > div.logo_dot {
+
+    background: #fff;
+    border-radius: 10em;
+    top: 23%;
+    right: 23%;
+    left: auto;
+}
+
+.logo_border {
+    width: 74%;
+    height: 74%;
+    border-radius: 10em;
+    margin-top: -37%;
+    margin-left: -37%;
+}
+
+.logo_circle {
+    width: 48%;
+    height: 48%;
+    border-radius: 10em;
+    margin-top: -24%;
+    margin-left: -24%;
+}
+
+@keyframes animatebox {
+    0% {
+        transform: scale(0);
+        border-radius: 35.02627px;
+    }
+    2.5% {
+        transform: scale(1.1);
+        border-radius: 10em;
+    }
+    5% {
+        transform: scale(1);
+        border-radius: 35.02627px;
+    }
+    96% {
+        transform: scale(1);
+        border-radius: 35.02627px;
+    }
+    98% {
+        transform: scale(1.1);
+        border-radius: 10em;
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+.box {
+    animation: animatebox 10s infinite alternate;
+}
+
+@keyframes animateborder {
+    0% {
+        border-radius: 10em;
+        transform: scale(0);
+        opacity: 0;
+    }
+    2% {
+        opacity: 0;
+    }
+    18% {
+        border-radius: 35.02627px;
+        transform: scale(1);
+        opacity: 1;
+    }
+    90% {
+        border-radius: 35.02627px;
+        transform: scale(1);
+    }
+}
+
+.box .logo_border {
+    animation: animateborder 5s infinite alternate;
+}
+
+@keyframes animatecircle {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    5% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    10% {
+        transform: scale(1.3);
+        opacity: 1;
+    }
+    15% {
+        transform: scale(1);
+    }
+    95% {
+        transform: scale(1);
+        background-color: transparent;
+    }
+    97% {
+        transform: scale(1.2);
+        background-color: #fff;
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.box .logo_circle {
+    animation: animatecircle 5s infinite alternate;
+}
+
+@keyframes animatedot {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 1;
+    }
+    75% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.box .logo_dot {
+    animation: animatedot 5s infinite alternate;
 }
