--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -17,3 +17,54 @@
     margin: 0;
     line-height: 17px;
 }
+.login_form{
+    width: 94%;
+    min-height: 150px;
+    background: #fff;
+    border: 1px solid #d8e4d4;
+    border-radius: 10px;
+    margin: 3%;
+    margin-top: 6%;
+    padding-bottom: 20px;
+}
+
+.rem_me_inp{
+    margin-left: 40px;
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+
+    flex-flow: row;
+
+}
+.login_btn {
+    margin-left: 120px;
+    margin-top: 30px;
+    width: 120px;
+}
+
+.login_btn button{
+    width: 120px;
+    height: 25px;
+    border: 1px solid #a1ce93;
+    color: #87b27e;
+    font-size: 13px;
+    border-radius: 15px;
+    text-align: center;
+    line-height: 23px;
+    background-color: #fff;
+}
+.login_btn button:hover{
+    box-shadow: 0 0 3px 2px #dcee97;
+    color: #e59877;
+}
+.rem_me_inp label{
+    font-size: 12px;
+margin-left: 5px;
+    line-height: 12px;
+}
+.rem_me_inp input{
+    margin-top: 0;
+    margin-bottom: 0;
+
+}
