--- a/src/Components/Profile/My_post/My_post.module.css
+++ b/src/Components/Profile/My_post/My_post.module.css
@@ -55,7 +55,7 @@
 }
 .add_post_btn {
     position: absolute;
-    top: 75px;
+    bottom: 0px;
     right: 0px;
     width: 120px;
     height: 25px;
